--- a/static/css/navigation.css
+++ b/static/css/navigation.css
@@ -113,7 +113,7 @@
 
 /* Profile Dropdown */
 .profile-container {
-    position: absolute;
+    position: fixed;
     top: 15px;
     right: 25px;
     z-index: 1002;
